add favourite recipes fragment and fix update

--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.RecipeDetailFragment">
+    tools:context=".presentation.fragments.RecipeDetailFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
-        android:layout_height="390dp"
+        android:layout_height="420dp"
         android:layout_margin="@dimen/margin_start_top"
         app:cardCornerRadius="@dimen/corner_radius"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,17 +18,30 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="390dp">
+            android:layout_height="420dp">
 
             <TextView
                 android:id="@+id/tvTitle"
-                style="@style/MyTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_start_top"
+                android:fontFamily="@font/lato_light"
                 android:textColor="@color/black"
                 android:textSize="@dimen/title"
+                app:layout_constraintEnd_toStartOf="@+id/ivHeart"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Pasta" />
+
+            <ImageView
+                android:id="@+id/ivHeart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_start_top"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/heart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ivRecipeImage"
@@ -50,7 +63,8 @@
                 android:src="@drawable/clock"
                 app:layout_constraintEnd_toStartOf="@+id/guideline1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage" />
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage"
+                app:tint="@color/dark_grey" />
 
             <ImageView
                 android:id="@+id/ivServings"
@@ -60,7 +74,8 @@
                 android:src="@drawable/servings"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="@+id/guideline1"
-                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage" />
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage"
+                app:tint="@color/dark_grey" />
 
             <ProgressBar
                 android:id="@+id/pbHeathScore"
@@ -82,7 +97,8 @@
                 android:src="@drawable/energy"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline3"
-                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage" />
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage"
+                app:tint="@color/dark_grey" />
 
             <TextView
                 android:id="@+id/tvReadyInMinutes"
@@ -201,25 +217,27 @@
         tools:listitem="@layout/ingredient_item" />
 
     <TextView
-        android:id="@+id/equipment"
+        android:id="@+id/dishTypes"
         style="@style/MyTextView"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="@string/equipments"
+        android:text="@string/dish_types"
         android:textColor="@color/black"
         android:textSize="@dimen/title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
     <TextView
-        android:id="@+id/tvEquipment"
-        style="@style/MyTextView"
+        android:id="@+id/tvDishTypes"
+        android:fontFamily="@font/lato_light"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/equipment" />
+        app:layout_constraintTop_toBottomOf="@+id/dishTypes" />
 
     <Button
         android:id="@+id/button"
