--- a/app/src/main/res/layout/fragment_first_page_container.xml
+++ b/app/src/main/res/layout/fragment_first_page_container.xml
@@ -13,5 +13,5 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph"
-        tools:context=".presentation.ContainerFragment" />
+        tools:context=".presentation.fragments.fragmentContainers.FirstPageContainerFragment" />
 </LinearLayout>
