--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,12 @@
      <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#EAE7E7</color>
-    <color name="dark_grey">#201E1E</color>
+    <color name="dark_grey">#302D2D</color>
     <color name="turquoise">#014E3C</color>
     <color name="peach">#EFC699</color>
     <color name="red">#C30000</color>
     <color name="light_purple">#DBBCEB</color>
-    <color name="light_peach">#EBD4BC</color>
+    <color name="light_peach">#F4E0CB</color>
     <color name="light_green">#C2F8C8</color>
+    <color name="light_blue">#C0C8F6</color>
 </resources>
