--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="start_end">70dp</dimen>
     <dimen name="start_end1">65dp</dimen>
     <dimen name="title">20sp</dimen>
+    <dimen name="size_title">30sp</dimen>
 </resources>
