--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -6,17 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.FavouritesFragment">
 
+    <TextView
+        android:id="@+id/textView2"
+        style="@style/MyTextView"
+        android:layout_margin="@dimen/margin_start_top"
+        android:text="@string/my_favourite_recipes"
+        android:textColor="@color/black"
+        android:textSize="@dimen/size_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFavourites"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:listitem="@layout/recipe_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
