--- a/app/src/main/res/layout/fragment_second_page_container.xml
+++ b/app/src/main/res/layout/fragment_second_page_container.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/MyTextView"
-        android:layout_margin="@dimen/margin_start_top"
-        android:text="@string/my_favourite_recipes"
-        android:textColor="@color/black"
-        android:textSize="@dimen/size_title" />
-
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/navHostFragment2"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph2"
-        tools:context=".presentation.fragments.fragmentContainers.SecondPageContainerFragment" />
+        android:name="com.android.recipe.presentation.fragments.FavouritesFragment"/>
 </LinearLayout>
