--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
      <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#EAE7E7</color>
-    <color name="dark_grey">#302D2D</color>
+    <color name="dark_grey">#5E5B5B</color>
     <color name="turquoise">#014E3C</color>
     <color name="peach">#EFC699</color>
     <color name="red">#C30000</color>
@@ -11,4 +11,5 @@
     <color name="light_peach">#F4E0CB</color>
     <color name="light_green">#C2F8C8</color>
     <color name="light_blue">#C0C8F6</color>
+    <color name="blue">#3F51B5</color>
 </resources>
