--- a/app/src/main/res/layout/fragment_third_page_container.xml
+++ b/app/src/main/res/layout/fragment_third_page_container.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container2"
+        android:id="@+id/fragment_container3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.android.recipe.presentation.fragments.FavouritesFragment"/>
+        android:name="com.android.recipe.presentation.fragments.ProfileFragment"/>
 </LinearLayout>
