--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.ProfileFragment">
+    android:orientation="vertical"
+    tools:context=".presentation.fragments.RecipeDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="320dp"
+        android:layout_margin="@dimen/margin_start_top"
+        app:cardCornerRadius="@dimen/corner_radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_start_top"
+                android:layout_gravity="center_horizontal"
+                app:cardCornerRadius="125dp">
+
+                <TextView
+                    style="@style/MyTextView"
+                    android:text="@string/click_here_to_upload_photo"
+                    android:textSize="@dimen/title"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_vertical|center_horizontal"/>
+
+                <ImageView
+                    android:id="@+id/ivPhoto"
+                    android:scaleType="centerCrop"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                     />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                style="@style/MyTextView"
+                tools:text = "Makar"
+                android:layout_marginTop="@dimen/margin_start_top"
+                android:textSize="@dimen/title"
+                android:textColor="@color/black"
+                android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/myRecipes"
+        style="@style/MyTextView"
+        android:layout_marginTop="@dimen/margin_start_top"
+        android:layout_marginStart="20dp"
+
+        android:text="@string/my_recipes"
+        android:textColor="@color/black"
+        android:textSize="@dimen/title" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMyRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_start_top"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recipe_item" />
+
+    <Button
+        android:id="@+id/btnCreateRecipe"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="@dimen/margin_start_top"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/create_recipe"
+        android:layout_gravity="end"
+        android:textColor="@color/black" />
+
+</LinearLayout>
