--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="start_end1">65dp</dimen>
     <dimen name="title">20sp</dimen>
     <dimen name="size_title">30sp</dimen>
+    <dimen name="margin_start_end">30dp</dimen>
 </resources>
