--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/lato_light</item>
     </style>
+
+    <style name="TextInputLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_start_end</item>
+        <item name="android:layout_marginEnd">@dimen/margin_start_end</item>
+    </style>
 </resources>
