--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,10 +17,10 @@
         app:tint="@color/medium_blue" />
 
     <TextView
-        android:id="@+id/tvRegister"
+        android:id="@+id/tvLogin"
         style="@style/MyTextView"
         android:layout_marginBottom="40dp"
-        android:text="@string/registration"
+        android:text="@string/log_in"
         android:textColor="@color/dark_grey"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivHat"
@@ -29,35 +29,15 @@
         app:layout_constraintTop_toTopOf="@+id/ivHat" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tfUsername"
-        style="@style/TextInputLayout"
-        android:layout_marginTop="80dp"
-        android:hint="@string/username"
-        app:errorEnabled="true"
-        app:boxStrokeColor="@color/medium_blue"
-        app:boxStrokeErrorColor="@color/red"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivHat"
-        app:startIconDrawable="@drawable/person">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etUsername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:fontFamily="@font/lato_light"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tfEmail"
         style="@style/TextInputLayout"
+        android:layout_marginTop="50dp"
         android:hint="@string/email"
-        app:errorEnabled="true"
         app:boxStrokeColor="@color/medium_blue"
         app:boxStrokeErrorColor="@color/red"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tfUsername"
+        app:layout_constraintTop_toBottomOf="@+id/ivHat"
         app:startIconDrawable="@drawable/email">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -72,10 +52,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tfPassword"
         style="@style/TextInputLayout"
-        app:errorEnabled="true"
         android:hint="@string/password"
         app:boxStrokeColor="@color/medium_blue"
         app:boxStrokeErrorColor="@color/red"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tfEmail"
         app:passwordToggleContentDescription="password"
@@ -92,29 +72,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tfRPassword"
-        style="@style/TextInputLayout"
-        app:errorEnabled="true"
-        android:hint="@string/repeat_password"
-        app:boxStrokeColor="@color/medium_blue"
-        app:boxStrokeErrorColor="@color/red"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tfPassword"
-        app:passwordToggleContentDescription="password"
-        app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/lock">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvRPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:fontFamily="@font/lato_light"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="250dp"
@@ -125,5 +82,5 @@
         android:text="@string/sign_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tfRPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/tfPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
