--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,21 @@
     android:orientation="vertical"
     tools:context=".presentation.MainActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/mainFragmentContainer"
-        android:name="com.android.recipe.presentation.fragments.RegistrationFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--    <androidx.fragment.app.FragmentContainerView-->
+<!--        android:id="@+id/mainFragmentContainer"-->
+<!--        android:name="com.android.recipe.presentation.fragments.RegistrationFragment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
 
     <androidx.viewpager2.widget.ViewPager2
-        android:visibility="gone"
+
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
     <com.google.android.material.tabs.TabLayout
-        android:visibility="gone"
+
         android:id="@+id/tabLayout"
         android:background="@drawable/tab_rounded"
         android:layout_width="match_parent"
