--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,41 +16,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_start_top"
                 android:layout_gravity="center_horizontal"
-                app:cardCornerRadius="125dp">
+                app:cardCornerRadius="125dp"
+                android:layout_marginTop="@dimen/margin_start_top"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     style="@style/MyTextView"
-                    android:text="@string/click_here_to_upload_photo"
-                    android:textSize="@dimen/title"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:text="@string/no_image_available"
                     android:textAlignment="center"
-                    android:layout_gravity="center_vertical|center_horizontal"/>
+                    android:textSize="@dimen/title" />
 
                 <ImageView
                     android:id="@+id/ivPhoto"
-                    android:scaleType="centerCrop"
                     android:layout_width="250dp"
                     android:layout_height="250dp"
-                     />
+                    android:scaleType="centerCrop" />
+
             </androidx.cardview.widget.CardView>
 
             <TextView
                 style="@style/MyTextView"
-                tools:text = "Makar"
-                android:layout_marginTop="@dimen/margin_start_top"
-                android:textSize="@dimen/title"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/black"
-                android:layout_gravity="center_horizontal"/>
-        </LinearLayout>
+                android:textSize="@dimen/title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView5"
+                tools:text="Makar" />
+
+            <ImageButton
+                android:id="@+id/btnEdit"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="45dp"
+                android:layout_height="40dp"
+                android:src="@drawable/edit"
+                android:layout_marginTop="@dimen/margin_start_top"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cardView5"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
