--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -87,7 +87,7 @@
     <TextView
         android:id="@+id/tvNotAccount"
         style="@style/MyTextView"
-        android:layout_marginBottom="50dp"
+        android:layout_margin="@dimen/margin_start_top"
         android:textSize="20sp"
         android:text="@string/i_don_t_have_an_account"
         android:textColor="@color/medium_blue"
