--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,12 +32,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    style="@style/MyTextView"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:text="@string/no_image_available"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/title" />
+                <ImageView
+                    android:id="@+id/ivNoPhoto"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/photo"
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
                 <ImageView
                     android:id="@+id/ivPhoto"
